Reorganized project to allow for detection of page transitions and highlight navigatino item accordingly

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -21,6 +21,11 @@ a{
     background-color: white;
 }
 
+    .nav-item.active{
+        background-color: #FF7200;
+        color: white;
+    }
+
     .nav-item a{
         display: block;
         padding: 1em;
