--- a/src/css/pill.css
+++ b/src/css/pill.css
@@ -5,7 +5,7 @@ span.pill{
     font-weight: 800;
     display: inline-block;
     padding: 10px 20px;
-    margin: 0 10px;
+    margin: 0 10px 0 0;
     background: #FF7200;
     border-radius: 10px;
 }
