Reworked for express + react routes

--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -7,11 +7,11 @@
 
 }
 
-    .skillbar h2{
+    .skillbar h3{
 
         padding-right: 2em;
         display: inline-block;
-        width: 12%;
+        width: 8em;
 
     }
 
