Created projects page

--- a/src/css/homepage-elements.css
+++ b/src/css/homepage-elements.css
@@ -13,7 +13,7 @@ article .article-content{
 
 #about_blurb{
     display: flex;
-    height: 50vh;
+    min-height: 50vh;
     align-self: center;
     align-items: start;
 }
@@ -21,6 +21,23 @@ article .article-content{
     #about_blurb p{
         padding-top: 0;
         margin-top: 0;
+    }
+
+    @media screen and (max-width: 1000px) {
+
+        #about_blurb{
+            flex-direction: column;
+        }
+
+        #about_blurb img{
+            width: 100%;
+            margin-bottom: 2em;
+        }
+
+        #about_blurb .article-content{
+            width: 100%;
+        }
+
     }
 
 a.button{
