--- a/src/css/pill.css
+++ b/src/css/pill.css
@@ -5,7 +5,15 @@ span.pill{
     font-weight: 800;
     display: inline-block;
     padding: 10px 20px;
-    margin: 0 10px 0 0;
+    margin: 1em 10px 0 0;
     background: #FF7200;
     border-radius: 10px;
+}
+
+@media screen and (min-width: 500px){
+
+    span.pill{
+        text-align: center;
+    }
+
 }
