--- a/src/css/homepage-elements.css
+++ b/src/css/homepage-elements.css
@@ -11,30 +11,45 @@ article .article-content{
     line-height: 1.7em;
 }
 
-#about_blurb{
+.blurb{
     display: flex;
     min-height: 50vh;
     align-self: center;
     align-items: start;
 }
 
-    #about_blurb p{
+    .blurb .article-content{
         padding-top: 0;
         margin-top: 0;
     }
 
+.blurb_back{
+    display: flex;
+    flex-direction: row-reverse;
+    min-height: 50vh;
+    align-self: center;
+    align-items: start;
+}
+
+    .blurb_back .article-content{
+        padding-top: 0;
+        margin-top: 0;
+        margin-right: 1em;
+    }
+
+
     @media screen and (max-width: 1000px) {
 
-        #about_blurb{
+        .blurb{
             flex-direction: column;
         }
 
-        #about_blurb img{
+        .blurb img{
             width: 100%;
             margin-bottom: 2em;
         }
 
-        #about_blurb .article-content{
+        .blurb .article-content{
             width: 100%;
         }
 
